# jellyfin-recs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  history.example.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: compose.local.yml  docker-compose.yaml  entrypoint.sh
docs/: DOCKER.md  GIT.md
handoff/: CLAUDE_CODE_PROMPT.md  TASK.md  franchise_detection_reference.py  prompt_instruction_reference.py  recommender_reference_functions.py  tmdb_reference.py  tmdb_test_snippet.py  verify_snippet.py
src/jellyfin_recs/: config.py  dashboard.py  dashboard_ui.py  jellyfin_client.py  pipeline.py  recommender.py  run_container.py  run_scheduler.py  seed_history.py  settings.py  staging.py  storage.py  tmdb.py
tests/: smoke_test.py
